# agent-run

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  REPO.bazel  THIRD_PARTY_LICENSES.md  about.hbs  about.toml  build.rs  flake.nix  schema.json  version.env
.agent-run/: config.toml
.github/workflows/: nix.yml  release.yml  tests.yml
src/: main.rs  seccomp.rs  tracing.rs
tests/: integration.rs
tools/: BUILD.bazel  update-third-party-licenses.sh  workspace-status.sh
