[package]
name = "agent-run"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
anyhow = "1.0.103"
libc = "0.2.186"
nix = { version = "0.31.3", features = ["fs", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
thiserror = "2.0.18"
toml = "1.1.2"

[build-dependencies]
walkdir = "2.5.0"
