[package]
name = "agent-run"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-only"
description = "Run a coding agent in a sandboxed environment"
repository = "https://github.com/sin-ack/agent-run"
resolver = "2"

[dependencies]
anyhow = "1.0.103"
libc = "0.2.186"
nix = { version = "0.31.3", features = ["fs", "process"] }
schemars = { version = "1.2.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", optional = true }
shellexpand = "3.1.2"
thiserror = "2.0.18"
toml = "1.1.2"

[build-dependencies]
walkdir = "2.5.0"

[features]
external-bwrap = []
schema = ["dep:schemars", "dep:serde_json"]
